--- a/web/templates/exp02.html
+++ b/web/templates/exp02.html
@@ -250,7 +250,7 @@
                                   </a>
                                   <el-button v-if="(!is_submit && is_ensure_sensitive)" type="primary"  @click="submitForm('form')">提交</el-button>
                                   <p v-else-if="(is_submit && is_ensure_sensitive)"></p>
-                                  <p v-else style="font-size: 16x;color:#606266">请先选择敏感属性</p>
+                                  <p v-else style="font-size: 16px;color:#606266">请先选择敏感属性</p>
                               </div>
                           </el-form>
                         </div>
