--- a/web/templates/exp06.html
+++ b/web/templates/exp06.html
@@ -40,7 +40,7 @@
         <el-container>
             <!-- Header -->
             <header class="fixed-header">
-                <h2>欢迎进入公平性审计实验</h2>
+                <h2>审计步骤4：形成审计报告</h2>
             </header>
 
             <!-- Main -->
