处理bug和部分页面

--- a/web/templates/exp01.html
+++ b/web/templates/exp01.html
@@ -127,8 +127,8 @@
                                             </el-form-item>
                                             <el-form-item label="性别" prop="sex_Male">
                                                 <el-select v-model="form['sex_Male']" placeholder="男性或女性">
-                                                  <el-option label="男" value="0"></el-option>
-                                                  <el-option label="女" value="1"></el-option>
+                                                  <el-option label="男性" value="1"></el-option>
+                                                  <el-option label="女性" value="0"></el-option>
                                                 </el-select>
                                             </el-form-item>
                                             <el-form-item label="婚姻状况" prop="marital-status">
