--- a/web/templates/exp04.html
+++ b/web/templates/exp04.html
@@ -47,6 +47,13 @@
                 <div class="task-title">
                     <h1>寻找系统中的不公平样本</h1>
                 </div>
+
+                <div class="task-content" style="margin-left: 50px">
+                    <div class="task-content-description">
+                    <p>任务描述......</p>
+                    </div>
+                  </div>
+
                 <div class="task-content">
                     <el-row :gutter="40">
                         <!-- ---------form1----------------- -->
