--- a/web/templates/exp05.html
+++ b/web/templates/exp05.html
@@ -328,7 +328,7 @@
                                     <div class="result-card">
                                         <div class="result-content" style="width:80%; margin: 0 auto;">
                                             <p><span>判断两个样本被不公平对待的标准：①.分类结果1≠分类结果2；</span><span>②.样本1与样本2差异≤[[ parameter_c ]]</span></p>
-                                            <p><span>当前输入样本：</span><span :class="compare_standard1_class">①分类结果1[[ comparisonSymbol ]]</span>分类结果2； <span :class="compare_standard2_class">②样本1与样本2差异为[[ dx ]]</span></p>
+                                            <p><span>当前输入样本：</span><span :class="compare_standard1_class">①分类结果1[[ comparisonSymbol ]]（[[compare_standard1_description]]）</span>分类结果2； <span :class="compare_standard2_class">②样本1与样本2差异为[[ dx ]]（[[compare_standard2_description]]）</span></p>
                                             <p><span>判断模型对两个样本的分类结果为</span><span><b>[[ fairness_info ]]</b></span></p>
 
                                         </div>
@@ -485,7 +485,9 @@
                     loading: false,
                     // 控制显示的两个对比结果的颜色
                     compare_standard1_class:'',
-                    compare_standard2_class:'red',
+                    compare_standard2_class:'',
+                    compare_standard1_description: '',
+                    compare_standard2_description: '',
                 };
             },
             computed: {
@@ -504,9 +506,11 @@
                 comparisonSymbol() {
                 if(this.dy == 1){
                     this.compare_standard1_class = '';
+                    this.compare_standard1_description = '符合条件';
                     return '≠';
                 }else{
                     this.compare_standard1_class = 'red';
+                    this.compare_standard1_description = '不符合条件';
                     return '=';
                 }
             }
@@ -643,9 +647,13 @@
                                         if(dxNumeric > parameterCNumeric){
                                             console.log("进入>: dx is " + _this.dx + ", c is " + _this.parameter_c);
                                             _this.compare_standard2_class = 'red';
+                                            _this.compare_standard2_description = '不符合条件';
+
                                         }else{
                                             console.log("进入<=: dx is " + _this.dx + ", c is " + _this.parameter_c);
                                             _this.compare_standard2_class = '';
+                                            _this.compare_standard2_description = '符合条件';
+
                                         }
 
                                         let flag = response.data.fair_data.fair_or_not;
